doc: Create item info API document
